# video-processing-project

./: Build_CMake.txt  Build_DEPRECATED.txt  CMakeLists.txt  ChangeLog.txt  NOTES.txt  README.txt  license.txt
Source/: CMakeLists.txt  default.doxygen
Source/Apps/FrameGrabber/: ComTypeDefs.h  CustomSampleGrabberCB.h  FrameGrabber.cpp
Source/Codecs/: CMakeLists.txt
Source/Codecs/CodecUtils/: BitStreamBase.h  BitStreamBaseMSB.h  BitStreamReader.cpp  BitStreamReader.h  BitStreamReaderMSB.h  BitStreamWriter.cpp  BitStreamWriter.h  BitStreamWriterMSB.h  BlockH264.cpp  BlockH264.h  CAVLCH264Impl.cpp  CAVLCH264Impl.h  CAVLCH264Impl2.cpp  CMakeLists.txt  CodeFragmentForH264BlockLayerTest.cpp  CodeFragmentForH264MacroBlockLayerTest.cpp  CodedBlkPatternH264VlcDecoder.cpp  CodedBlkPatternH264VlcEncoder.cpp  CodedBlkPatternH264VlcEncoder.h  CoeffTokenH264VlcDecoder.cpp  CoeffTokenH264VlcDecoder.h  CoeffTokenH264VlcEncoder.h  ExpGolombSignedVlcDecoder.h  ExpGolombSignedVlcEncoder.h  ExpGolombTruncVlcEncoder.h  ExpGolombUnsignedVlcDecoder.cpp  ExpGolombUnsignedVlcEncoder.cpp  ExpGolombUnsignedVlcEncoder.h  FastForward4x4ITImpl1.cpp  FastForward4x4ITImpl1.h  FastForward4x4On16x16ITImpl1.cpp  FastForwardDC2x2ITImpl1.cpp  FastForwardDC2x2ITImpl1.h  FastForwardDC4x4ITImpl1.cpp  FastForwardDC4x4ITImpl1.h  FastInverse4x4ITImpl1.cpp  FastInverse4x4On16x16ITImpl1.cpp  FastInverseDC2x2ITImpl1.cpp  FastInverseDC2x2ITImpl1.h  FastInverseDC4x4ITImpl1.cpp  (+45 more)
Source/Codecs/H264v2/: CMakeLists.txt  H264v2.cpp  stdafx.cpp  stdafx.h
Source/Codecs/H264v2Codec/: H264v2Codec.cpp  H264v2Codec.h  H264v2CodecHeader.cpp  H264v2CodecHeader.h
Source/Codecs/Opus/: CMakeLists.txt  OpusCodec.cpp  OpusCodec.h  OpusFactory.h  dllmain.cpp  stdafx.h  targetver.h
Source/Filters/: CMakeLists.txt
Source/Filters/DirectShow/: CMakeLists.txt  FilterParameters.h
Source/Filters/DirectShow/AudioMixingFilter/: AudioMixingFilter.aps  AudioMixingFilter.cpp  AudioMixingFilter.rc  DLLSetup.cpp
Source/Filters/DirectShow/CropFilter/: CropFilter.cpp  CropFilter.h  CropFilter.rc  CropProperties.h  DLLSetup.cpp  resource.h  stdafx.cpp  stdafx.h
Source/Filters/DirectShow/FrameSkipperFilter/: DLLSetup.cpp  FrameSkipperFilter.cpp  FrameSkipperFilter.h  FrameSkipperProperties.h
Source/Filters/DirectShow/FrameSkippingFilter/: DLLSetup.cpp  FrameSkippingFilter.aps  FrameSkippingFilter.cpp  FrameSkippingFilter.def  FrameSkippingFilter.h  FrameSkippingFilter.rc  FrameSkippingFilter21Feb2011.cpp  FrameSkippingProperties.h  stdafx.h
Source/Filters/DirectShow/FramerateDisplayFilter/: CMakeLists.txt  FramerateDisplayFilter.cpp  FramerateDisplayFilter.h  FramerateDisplayFilter.rc  FramerateDisplayProperties.h  resource.h  stdafx.h
Source/Filters/DirectShow/H264DecoderFilter/: CMakeLists.txt  DLLSetup.cpp  H264DecoderFilter.cpp  H264DecoderFilter.def  H264DecoderFilter.h  stdafx.cpp  stdafx.h
Source/Filters/DirectShow/H264EncoderFilter/: CMakeLists.txt  DLLSetup.cpp  H264EncoderFilter.cpp  H264EncoderFilter.h  H264EncoderFilter.rc  H264EncoderProperties.h  resource.h  stdafx.cpp
Source/Filters/DirectShow/H264Source/: CMakeLists.txt  DLLSetup.cpp  H264OutputPin.cpp  H264OutputPin.h  H264Properties.h  H264Source.cpp  H264Source.def  H264Source.h  resource.h  stdafx.h
Source/Filters/DirectShow/OpusDecoderFilter/: DLLSetup.cpp  stdafx.cpp  stdafx.h
Source/Filters/DirectShow/PicInPicFilter/: CMakeLists.txt  DLLSetup.cpp  PicInPicFilter.cpp  PicInPicFilter.h  PicInPicFilter.rc  PicInPicProperties.cpp  PicInPicProperties.h  resource.h
Source/Filters/DirectShow/RGBtoYUV420Filter/: CMakeLists.txt  DLLSetup.cpp  RGB2YUVProperties.h  RGBtoYUV420Filter.cpp  RGBtoYUV420Filter.h  RGBtoYUV420Filter.rc  resource.h  stdafx.cpp
Source/Filters/DirectShow/RotateFilter/: DLLSetup.cpp  RotateFilter.aps  RotateFilter.cpp  RotateFilter.def  RotateFilter.h  RotateFilter.rc  RotateProperties.h  resource.h
Source/Filters/DirectShow/RtspSinkFilter/: CMakeLists.txt  DirectShowNetworkCodecControlInterface.h  DllSetup.cpp  INetworkCodecControlInterface.h  RtspSinkFilter.cpp  RtspSinkFilter.def  RtspSinkFilter.h  RtspSinkGuids.h  RtspSinkInputPin.cpp  RtspSinkInputPin.h  RtspSinkProperties.h  StepBasedRateController.h  resource.h  stdafx.h
Source/Filters/DirectShow/RtspSourceFilter/: AsyncRtspClientAdapter.cpp  (+26 more)
Source/RtvcLib/: CMakeLists.txt
Source/RtvcLib/DirectShow/: CSettingsInterface.cpp  CSettingsInterface.h  CStatusInterface.h  CodecControlInterface.h  CommonDefs.h  CustomBaseFilter.cpp  CustomBaseFilter.h  CustomMediaTypes.h  DirectShowHelper.cpp  DirectShowHelper.h  FilterPropertiesBase.h  MultiIOBaseFilter.cpp  MultiIOBaseFilter.h  MultiIOInputPin.cpp  MultiIOInputPin.h  MultiIOOutputPin.cpp  MultiIOOutputPin.h  NotifyCodes.h  SettingsInterface.h  StatusInterface.h  VideoMixingBase.cpp  VideoMixingBase.h  stdafx.h
Source/RtvcLib/GeneralUtils/: MeasurementTable.cpp  MeasurementTable.h  stdafx.cpp
Source/RtvcLib/Image/: FastFixedPointRGB24toYUV420Converter.cpp  FastFixedPointRGB24toYUV420Converter.h  FastGpuRGB24toYUV420Converter.cpp  FastLookupTableRGB24toYUV420Converter.h  FastSimdRGB24toYUV420Converter.cpp  FastSimdRGB24toYUV420Converter.h  MtRGB24toYUV420Converter.cpp  MtRGB24toYUV420Converter.h  OverlayMem2Dv2.h  PicConcatRGB24Impl.cpp  PicConcatRGB24Impl.h  PicConcatRGB32Impl.cpp  PicConcatRGB32Impl.h  PicCropperBase.h  PicCropperRGB24Impl.cpp  PicCropperRGB24Impl.h  PicCropperRGB32Impl.cpp  PicCropperRGB32Impl.h  PicInPicBase.h  PicInPicRGB24Impl.h  PicInPicRGB32Impl.cpp  PicInPicRGB32Impl.h  PicRotateBase.h  PicRotateRGB24Impl.cpp  PicRotateRGB24Impl.h  PicRotateRGB32Impl.cpp  PicRotateRGB32Impl.h  PicRotateRGBBase.cpp  PicRotateRGBBase.h  PicScalerBase.h  PicScalerRGB24Impl.cpp  PicScalerRGB24Impl.h  PicScalerYUV420PImpl.cpp  PicScalerYUV420PImpl.h  RGBtoRGBConverter.h  RGBtoYUV420Converter.h  RealRGB24toYUV420Converter.cpp  RealRGB24toYUV420Converter.h  RealRGB24toYUV420ConverterImpl2.h  RealRGB24toYUV420ConverterImpl2Ver16.cpp  (+12 more)
Source/RtvcLib/Shared/: CommonDefs.h  Conversion.h  MediaSample.cpp  MediaSample.h  StringUtil.h
(+726 files in other folders)
