#CMakeLists.txt in DirectShow
#ADD_SUBDIRECTORY(AacDecoderFilter)
#ADD_SUBDIRECTORY(AacEncoderFilter)
ADD_SUBDIRECTORY(AudioMixingFilter)
#ADD_SUBDIRECTORY(AMRDecoderFilter)
#ADD_SUBDIRECTORY(AMREncoderFilter)
ADD_SUBDIRECTORY(CropFilter)
ADD_SUBDIRECTORY(FramerateDisplayFilter)
ADD_SUBDIRECTORY(FrameSkippingFilter)
ADD_SUBDIRECTORY(H264DecoderFilter)
ADD_SUBDIRECTORY(H264EncoderFilter)
ADD_SUBDIRECTORY(H264Source)
IF (OPUS_SUPPORT)
ADD_SUBDIRECTORY(OpusDecoderFilter)
#ADD_SUBDIRECTORY(OpusEncoderFilter)
ENDIF (OPUS_SUPPORT)
ADD_SUBDIRECTORY(PicInPicFilter)
ADD_SUBDIRECTORY(RGBtoYUV420Filter)
ADD_SUBDIRECTORY(RotateFilter)
# NOTE: this has many additional dependencies such as boost, glog, LiveMediaExt, cpp-util
IF (BUILD_RTSP_SINK_FILTER)
ADD_SUBDIRECTORY(RtspSinkFilter)
ENDIF (BUILD_RTSP_SINK_FILTER)
ADD_SUBDIRECTORY(RtspSourceFilter)
ADD_SUBDIRECTORY(ScaleFilter)
ADD_SUBDIRECTORY(SkewingFilter)
ADD_SUBDIRECTORY(Stereo2MonoFilter)
ADD_SUBDIRECTORY(Tee)
ADD_SUBDIRECTORY(TimestampLoggerFilter)
ADD_SUBDIRECTORY(VideoMixingFilter)
#ADD_SUBDIRECTORY(VirtualCam)
ADD_SUBDIRECTORY(VirtualMic)
ADD_SUBDIRECTORY(YUV420ToRGBFilter)
ADD_SUBDIRECTORY(YUV444ToRGBFilter)
ADD_SUBDIRECTORY(YUVSource)
