# CMakeLists.txt for <YUV444ToRGBFilter> 

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_BUILD_FOR_SHORT")

INCLUDE_DIRECTORIES(
${vppIncludes}
)

# Lib directories
LINK_DIRECTORIES(
${vppLink}
)

SET(FLT_HDRS
stdafx.h
YUV444ToRGBFilter.h
)

SET(FLT_SRCS 
DLLSetup.cpp
stdafx.cpp
YUV444ToRGBFilter.cpp
YUV444ToRGBFilter.def
)

ADD_LIBRARY(
YUV444ToRGBFilter SHARED ${FLT_SRCS} ${FLT_HDRS})

TARGET_LINK_LIBRARIES (
YUV444ToRGBFilter
${vppLibs}
vpp
) 

INSTALL(
  TARGETS YUV444ToRGBFilter
  ARCHIVE DESTINATION bin
  LIBRARY DESTINATION bin
)

IF (REGISTER_DS_FILTERS)
ADD_CUSTOM_COMMAND(
TARGET YUV444ToRGBFilter 
POST_BUILD COMMAND 
regsvr32 /s \"$(TargetPath)\"
)
ENDIF(REGISTER_DS_FILTERS)
